src/generated/CompiscriptParser.py
# Generated from Compiscript.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CompiscriptParser ( Parser ):

    grammarFileName = "Compiscript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "'var'", "'const'", "'function'", 
                     "'class'", "'print'", "'if'", "'else'", "'while'", 
                     "'do'", "'for'", "'foreach'", "'in'", "'break'", "'continue'", 
                     "'return'", "'try'", "'catch'", "'switch'", "'case'", 
                     "'default'", "'new'", "'this'", "'null'", "'true'", 
                     "'false'", "'boolean'", "'integer'", "'string'", "'||'", 
                     "'&&'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", 
                     "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'?'", 
                     "':'", "';'", "','", "'.'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "LET", "VAR", "CONST", "FUNCTION", "CLASS", 
                      "PRINT", "IF", "ELSE", "WHILE", "DO", "FOR", "FOREACH", 
                      "IN", "BREAK", "CONTINUE", "RETURN", "TRY", "CATCH", 
                      "SWITCH", "CASE", "DEFAULT", "NEW", "THIS", "NULL", 
                      "TRUE", "FALSE", "BOOLEAN", "INTEGER", "STRING", "OR", 
                      "AND", "EQUAL", "NOT_EQUAL", "LE", "GE", "LT", "GT", 
                      "ASSIGN", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", 
                      "NOT", "QUESTION", "COLON", "SEMI", "COMMA", "DOT", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "IntegerLiteral", "StringLiteral", "Identifier", 
                      "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_block = 2
    RULE_variableDeclaration = 3
    RULE_constantDeclaration = 4
    RULE_typeAnnotation = 5
    RULE_initializer = 6
    RULE_expressionStatement = 7
    RULE_printStatement = 8
    RULE_ifStatement = 9
    RULE_whileStatement = 10
    RULE_doWhileStatement = 11
    RULE_forStatement = 12
    RULE_forInitializer = 13
    RULE_foreachStatement = 14
    RULE_breakStatement = 15
    RULE_continueStatement = 16
    RULE_returnStatement = 17
    RULE_tryCatchStatement = 18
    RULE_switchStatement = 19
    RULE_switchCase = 20
    RULE_defaultCase = 21
    RULE_functionDeclaration = 22
    RULE_parameters = 23
    RULE_parameter = 24
    RULE_classDeclaration = 25
    RULE_classMember = 26
    RULE_expression = 27
    RULE_assignmentExpression = 28
    RULE_conditionalExpression = 29
    RULE_logicalOrExpression = 30
    RULE_logicalAndExpression = 31
    RULE_equalityExpression = 32
    RULE_relationalExpression = 33
    RULE_additiveExpression = 34
    RULE_multiplicativeExpression = 35
    RULE_unaryExpression = 36
    RULE_primaryExpression = 37
    RULE_literalExpression = 38
    RULE_leftHandSide = 39
    RULE_primaryAtom = 40
    RULE_suffixOperation = 41
    RULE_arguments = 42
    RULE_arrayLiteral = 43
    RULE_type = 44
    RULE_baseType = 45

    ruleNames =  [ "program", "statement", "block", "variableDeclaration", 
                   "constantDeclaration", "typeAnnotation", "initializer", 
                   "expressionStatement", "printStatement", "ifStatement", 
                   "whileStatement", "doWhileStatement", "forStatement", 
                   "forInitializer", "foreachStatement", "breakStatement", 
                   "continueStatement", "returnStatement", "tryCatchStatement", 
                   "switchStatement", "switchCase", "defaultCase", "functionDeclaration", 
                   "parameters", "parameter", "classDeclaration", "classMember", 
                   "expression", "assignmentExpression", "conditionalExpression", 
                   "logicalOrExpression", "logicalAndExpression", "equalityExpression", 
                   "relationalExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "primaryExpression", "literalExpression", 
                   "leftHandSide", "primaryAtom", "suffixOperation", "arguments", 
                   "arrayLiteral", "type", "baseType" ]

    EOF = Token.EOF
    LET=1
    VAR=2
    CONST=3
    FUNCTION=4
    CLASS=5
    PRINT=6
    IF=7
    ELSE=8
    WHILE=9
    DO=10
    FOR=11
    FOREACH=12
    IN=13
    BREAK=14
    CONTINUE=15
    RETURN=16
    TRY=17
    CATCH=18
    SWITCH=19
    CASE=20
    DEFAULT=21
    NEW=22
    THIS=23
    NULL=24
    TRUE=25
    FALSE=26
    BOOLEAN=27
    INTEGER=28
    STRING=29
    OR=30
    AND=31
    EQUAL=32
    NOT_EQUAL=33
    LE=34
    GE=35
    LT=36
    GT=37
    ASSIGN=38
    PLUS=39
    MINUS=40
    STAR=41
    SLASH=42
    PERCENT=43
    NOT=44
    QUESTION=45
    COLON=46
    SEMI=47
    COMMA=48
    DOT=49
    LPAREN=50
    RPAREN=51
    LBRACE=52
    RBRACE=53
    LBRACK=54
    RBRACK=55
    IntegerLiteral=56
    StringLiteral=57
    Identifier=58
    WS=59
    LINE_COMMENT=60
    BLOCK_COMMENT=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CompiscriptParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiscriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(CompiscriptParser.StatementContext,i)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CompiscriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 528065748137664254) != 0):
                self.state = 92
                self.statement()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(CompiscriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(CompiscriptParser.VariableDeclarationContext,0)


        def constantDeclaration(self):
            return self.getTypedRuleContext(CompiscriptParser.ConstantDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(CompiscriptParser.FunctionDeclarationContext,0)


        def classDeclaration(self):
            return self.getTypedRuleContext(CompiscriptParser.ClassDeclarationContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.PrintStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(CompiscriptParser.BlockContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.WhileStatementContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.DoWhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ForStatementContext,0)


        def foreachStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ForeachStatementContext,0)


        def tryCatchStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.TryCatchStatementContext,0)


        def switchStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.SwitchStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ContinueStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CompiscriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.variableDeclaration()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.constantDeclaration()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.functionDeclaration()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.classDeclaration()
                pass
            elif token in [22, 23, 24, 25, 26, 40, 44, 50, 54, 56, 57, 58]:
                self.enterOuterAlt(localctx, 5)
                self.state = 104
                self.expressionStatement()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 6)
                self.state = 105
                self.printStatement()
                pass
            elif token in [52]:
                self.enterOuterAlt(localctx, 7)
                self.state = 106
                self.block()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 8)
                self.state = 107
                self.ifStatement()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 9)
                self.state = 108
                self.whileStatement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 10)
                self.state = 109
                self.doWhileStatement()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 11)
                self.state = 110
                self.forStatement()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 12)
                self.state = 111
                self.foreachStatement()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 13)
                self.state = 112
                self.tryCatchStatement()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 14)
                self.state = 113
                self.switchStatement()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 15)
                self.state = 114
                self.breakStatement()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 16)
                self.state = 115
                self.continueStatement()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 17)
                self.state = 116
                self.returnStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CompiscriptParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CompiscriptParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiscriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(CompiscriptParser.StatementContext,i)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = CompiscriptParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(CompiscriptParser.LBRACE)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 528065748137664254) != 0):
                self.state = 120
                self.statement()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(CompiscriptParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CompiscriptParser.Identifier, 0)

        def SEMI(self):
            return self.getToken(CompiscriptParser.SEMI, 0)

        def LET(self):
            return self.getToken(CompiscriptParser.LET, 0)

        def VAR(self):
            return self.getToken(CompiscriptParser.VAR, 0)

        def typeAnnotation(self):
            return self.getTypedRuleContext(CompiscriptParser.TypeAnnotationContext,0)


        def initializer(self):
            return self.getTypedRuleContext(CompiscriptParser.InitializerContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_variableDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = CompiscriptParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 129
            self.match(CompiscriptParser.Identifier)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 130
                self.typeAnnotation()


            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 133
                self.initializer()


            self.state = 136
            self.match(CompiscriptParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(CompiscriptParser.CONST, 0)

        def Identifier(self):
            return self.getToken(CompiscriptParser.Identifier, 0)

        def ASSIGN(self):
            return self.getToken(CompiscriptParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(CompiscriptParser.SEMI, 0)

        def typeAnnotation(self):
            return self.getTypedRuleContext(CompiscriptParser.TypeAnnotationContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_constantDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantDeclaration" ):
                return visitor.visitConstantDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def constantDeclaration(self):

        localctx = CompiscriptParser.ConstantDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constantDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(CompiscriptParser.CONST)
            self.state = 139
            self.match(CompiscriptParser.Identifier)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 140
                self.typeAnnotation()


            self.state = 143
            self.match(CompiscriptParser.ASSIGN)
            self.state = 144
            self.expression()
            self.state = 145
            self.match(CompiscriptParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeAnnotationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(CompiscriptParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(CompiscriptParser.TypeContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_typeAnnotation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeAnnotation" ):
                return visitor.visitTypeAnnotation(self)
            else:
                return visitor.visitChildren(self)




    def typeAnnotation(self):

        localctx = CompiscriptParser.TypeAnnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typeAnnotation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(CompiscriptParser.COLON)
            self.state = 148
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitializerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(CompiscriptParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_initializer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitializer" ):
                return visitor.visitInitializer(self)
            else:
                return visitor.visitChildren(self)




    def initializer(self):

        localctx = CompiscriptParser.InitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_initializer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(CompiscriptParser.ASSIGN)
            self.state = 151
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(CompiscriptParser.SEMI, 0)

        def getRuleIndex(self):
            return CompiscriptParser.RULE_expressionStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStatement" ):
                return visitor.visitExpressionStatement(self)
            else:
                return visitor.visitChildren(self)




    def expressionStatement(self):

        localctx = CompiscriptParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.expression()
            self.state = 154
            self.match(CompiscriptParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(CompiscriptParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(CompiscriptParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(CompiscriptParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(CompiscriptParser.SEMI, 0)

        def getRuleIndex(self):
            return CompiscriptParser.RULE_printStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)




    def printStatement(self):

        localctx = CompiscriptParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(CompiscriptParser.PRINT)
            self.state = 157
            self.match(CompiscriptParser.LPAREN)
            self.state = 158
            self.expression()
            self.state = 159
            self.match(CompiscriptParser.RPAREN)
            self.state = 160
            self.match(CompiscriptParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CompiscriptParser.IF, 0)

        def LPAREN(self):
            return self.getToken(CompiscriptParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(CompiscriptParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiscriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(CompiscriptParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(CompiscriptParser.ELSE, 0)

        def getRuleIndex(self):
            return CompiscriptParser.RULE_ifStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = CompiscriptParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(CompiscriptParser.IF)
            self.state = 163
            self.match(CompiscriptParser.LPAREN)
            self.state = 164
            self.expression()
            self.state = 165
            self.match(CompiscriptParser.RPAREN)
            self.state = 166
            self.statement()
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 167
                self.match(CompiscriptParser.ELSE)
                self.state = 168
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(CompiscriptParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(CompiscriptParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(CompiscriptParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(CompiscriptParser.StatementContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_whileStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = CompiscriptParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(CompiscriptParser.WHILE)
            self.state = 172
            self.match(CompiscriptParser.LPAREN)
            self.state = 173
            self.expression()
            self.state = 174
            self.match(CompiscriptParser.RPAREN)
            self.state = 175
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoWhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(CompiscriptParser.DO, 0)

        def statement(self):
            return self.getTypedRuleContext(CompiscriptParser.StatementContext,0)


        def WHILE(self):
            return self.getToken(CompiscriptParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(CompiscriptParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(CompiscriptParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(CompiscriptParser.SEMI, 0)

        def getRuleIndex(self):
            return CompiscriptParser.RULE_doWhileStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileStatement" ):
                return visitor.visitDoWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def doWhileStatement(self):

        localctx = CompiscriptParser.DoWhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_doWhileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(CompiscriptParser.DO)
            self.state = 178
            self.statement()
            self.state = 179
